<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/combos_destacados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/destacados"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="176dp">

                <ImageView
                    android:id="@+id/imageComboAseo"
                    android:layout_width="wrap_content"
                    android:layout_height="124dp"
                    app:srcCompat="@drawable/banner_perros_aseo_1030x310" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item1ComboAseo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shampoo" />

                    <TextView
                        android:id="@+id/item2ComboAseo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Talquitos" />

                    <TextView
                        android:id="@+id/item3ComboAseo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/locion" />

                    <TextView
                        android:id="@+id/item4ComboAseo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cremaDental" />

                    <TextView
                        android:id="@+id/DescriptionComboAseo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textoComboAseo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="8dp"
                        android:onClick="commingSoon"
                        android:text="@string/agregarCarrito" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageComboComida"
                    android:layout_width="wrap_content"
                    android:layout_height="226dp"
                    app:srcCompat="@drawable/comida_para_perros_pequenos" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item1ComboComida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Concentrado_perro" />

                    <TextView
                        android:id="@+id/item2ComboComida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premios_para_perro" />

                    <TextView
                        android:id="@+id/DescriptionCombocomida"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textoComboComidaPerro"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="commingSoon"
                        android:text="@string/agregarCarrito"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/imageComboLavadoPerro"
                    android:layout_width="wrap_content"
                    android:layout_height="400dp"
                    app:srcCompat="@drawable/lavado_perros" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item1ComboLavado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textItem1ComboLavado" />

                    <TextView
                        android:id="@+id/item2ComboLavado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textItem2ComboLavado" />

                    <TextView
                        android:id="@+id/DescriptionComboLavado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DescriptionComboLavado"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <Button
                        android:id="@+id/buttonComboLavado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="commingSoon"
                        android:text="@string/agregarCarrito" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tituloFormulario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textTitleFormMain"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textNameFormSubs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextNameForm" />

                <EditText
                    android:id="@+id/editTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textEmailFormSubs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TextNameForm" />

                <EditText
                    android:id="@+id/editTextPersonEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Email" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/SendFormMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textSendButton"
                    android:onClick="commingSoon"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>